--- a/tradisi.html
+++ b/tradisi.html
@@ -442,7 +442,7 @@
 <!-- NAVIGATION -->
 <nav class="nav">
   <div class="nav-inner">
-    <a href="#" class="brand"><img src="photo/logo.png" alt="Logo"></a>
+    <a href="#" class="brand"><img src="logo.png" alt="Logo"></a>
     <div class="nav-center">
       <ul>
         <li><a href="dashboard.html">Beranda</a></li>
@@ -470,7 +470,7 @@
   <!-- HERO SLIDER -->
   <header id="beranda" class="hero reveal">
     <div class="slides" id="slides">
-    <div class="slide active" style="background-image:url('galeri/event.png')"></div>
+    <div class="slide active" style="background-image:url('event.png')"></div>
 
       <div class="hero-overlay">
         <div class="hero-caption">
@@ -491,7 +491,7 @@
         <p>Nadran adalah upacara adat bagi para nelayan di pesisir pantai utara Jawa, nadran dalam istilah tradisi masyarakat Desa Juntinyuat disebut juga sebagai Pesta laut atau Sedekah Laut.</p>
       </div>
       <div class="card">
-        <div class="media" style="background-image:url('photo/nadran.jpg')" aria-label="Keraton Kesepuhan"></div>
+        <div class="media" style="background-image:url('nadran.jpg')" aria-label="Keraton Kesepuhan"></div>
       </div>
     </div>
   </section>
@@ -504,7 +504,7 @@
     <h3 class="section-title">Panjang Jimat</h3>
     <div class="grid two">
       <div class="card">
-        <div class="media" style="background-image:url('galeri/event.png')" aria-label="Tari Topeng Cirebon"></div>
+        <div class="media" style="background-image:url('event.png')" aria-label="Tari Topeng Cirebon"></div>
       </div>
       <div class="card pad">
         <p>pacara peringatan Maulid Nabi Muhammad SAW di Cirebon yang melibatkan arak-arakan benda-benda pusaka keraton yang diarak dalam bentuk piring besar (panjang) yang berisi makanan, sebagai simbol kelahiran Nabi.</p>
@@ -522,7 +522,7 @@
 <p>garebek syawal rutin digelar setiap tahun di kompleks pemakaman Sunan Gunung Jati, Kecamatan Gunungjati, Kabupaten Cirebon. Garebek syawal merupakan tradisi ziarah yang dilakukan keluarga keraton terhadap leluhurnya. Intinya, sultan dan keluarganya menggelar tahlilan dan doa bersama di ruangan pesarean Syekh Syarif Hidayatullah atau Sunan Gunung.</p>
       </div>
       <div class="card">
-        <div class="media" style="background-image:url('photo/grebeg_syawal.jpg')" aria-label="Nadran"></div>
+        <div class="media" style="background-image:url('grebeg_syawal.jpg')" aria-label="Nadran"></div>
       </div>
     </div>
   </section>
@@ -538,7 +538,7 @@
   </section>
 
   <footer class="reveal">
-    <img src="photo/logo.png" alt="Logo" style="height:36px;opacity:.7"/>
+    <img src="logo.png" alt="Logo" style="height:36px;opacity:.7"/>
     <div style="margin-top:8px;font-weight:700;color:#35576d">JELAJAHI WARISAN CIREBON</div>
   </footer>
 
