--- a/seni.html
+++ b/seni.html
@@ -696,7 +696,7 @@ background: #fff;
 <!-- NAVIGATION -->
 <nav class="nav">
   <div class="nav-inner">
-    <a href="#" class="brand"><img src="photo/logo.png" alt="Logo"></a>
+    <a href="#" class="brand"><img src="logo.png" alt="Logo"></a>
     <div class="nav-center">
       <ul>
         <li><a href="dashboard.html">Beranda</a></li>
@@ -725,7 +725,7 @@ background: #fff;
   <!-- HERO SLIDER -->
   <header id="beranda" class="hero reveal">
     <div class="slides" id="slides">
-    <div class="slide active" style="background-image:url('photo/Kesenian.png')"></div>
+    <div class="slide active" style="background-image:url('Kesenian.png')"></div>
 
       <div class="hero-overlay">
         <div class="hero-caption">
@@ -743,7 +743,7 @@ background: #fff;
 
     <!-- Empal Gentong -->
     <div class="card kuliner-card" data-modal="modal-empal">
-      <div class="media" style="background-image:url('photo/tari_topeng.jpg')" aria-label="Tari Topeng"></div>
+      <div class="media" style="background-image:url('tari_topeng.jpg')" aria-label="Tari Topeng"></div>
       <div class="card pad">
         <h4>Tari Topeng</h4>
         <p>Tari Topeng Cirebon adalah salah satu kesenian tari tradisional yang berasal dari Cirebon. Tarian ini dimainkan dengan penari yang menggunakan topeng sebagai properti utama</p>
@@ -752,7 +752,7 @@ background: #fff;
 
     <!-- Nasi Jamblang -->
     <div class="card kuliner-card" data-modal="modal-jamblang">
-      <div class="media" style="background-image:url('photo/tari_sintren.jpg')" aria-label="Tari Sintren"></div>
+      <div class="media" style="background-image:url('tari_sintren.jpg')" aria-label="Tari Sintren"></div>
       <div class="card pad">
         <h4>Tari Sintren</h4>
         <p>arian sintren merupakan sebuah seni tari tradisional dari Cirebon yang mengandung unsur magis</p>
@@ -761,7 +761,7 @@ background: #fff;
 
     <!-- Tahu Gejrot -->
     <div class="card kuliner-card" data-modal="modal-tahu">
-      <div class="media" style="background-image:url('photo/wayang_babad.png')" aria-label="Wayang Babad"></div>
+      <div class="media" style="background-image:url('wayang_babad.png')" aria-label="Wayang Babad"></div>
       <div class="card pad">
         <h4>Wayang Babad</h4>
         <p>Wayang babad adalah kesenian tradisional wayang, terutama wayang kulit dengan cerita-cerita dari babad atau sejarah Nusantara</p>
@@ -769,7 +769,7 @@ background: #fff;
     </div>
    <!-- Mie Koclok -->
     <div class="card kuliner-card" data-modal="modal-masres">
-      <div class="media" style="background-image:url('photo/masres.jpg')" aria-label="Mie Koclok"></div>
+      <div class="media" style="background-image:url('masres.jpg')" aria-label="Mie Koclok"></div>
       <div class="card pad">
         <h4>Masres (Sandiwara)</h4>
         <p>Masres atau sandiwara adalah sebutan untuk seni pertunjukan teater rakyat yang berkembang di wilayah Cirebon, Jawa Barat</p>
@@ -778,7 +778,7 @@ background: #fff;
 
     <!-- Serabi Cirebon -->
     <div class="card kuliner-card" data-modal="modal-angklung">
-      <div class="media" style="background-image:url('photo/tari_angklung.jpg')" aria-label="Serabi Cirebon"></div>
+      <div class="media" style="background-image:url('tari_angklung.jpg')" aria-label="Serabi Cirebon"></div>
       <div class="card pad">
         <h4>Tari Angklung Bungko</h4>
         <p>Angklung Bungko Cirebon adalah kesenian tradisional berupa musik dan tarian perang yang berasal dari Desa Bungko, Cirebon.</p>
@@ -793,7 +793,7 @@ background: #fff;
 
        <!-- Sate Kalong -->
     <div class="card kuliner-card" data-modal="modal-kota">
-      <div class="media" style="background-image:url('photo/cirebon.jpg')" aria-label="Sate Kalong"></div>
+      <div class="media" style="background-image:url('cirebon.jpg')" aria-label="Sate Kalong"></div>
       <div class="card pad">
         <h4>Lagu : Kota Cirebon</h4>
         <p>Lagu Daerah Cirebon, Jawabarat</p>
@@ -802,7 +802,7 @@ background: #fff;
 
     <!-- Kerupuk Melarat -->
     <div class="card kuliner-card" data-modal="modal-warung">
-      <div class="media" style="background-image:url('photo/Gapura-Selamat-Datang-Kota-Cirebon.jpg')" aria-label="Kerupuk Melarat"></div>
+      <div class="media" style="background-image:url('Gapura-Selamat-Datang-Kota-Cirebon.jpg')" aria-label="Kerupuk Melarat"></div>
       <div class="card pad">
         <h4>Lagu : Warung Pojok</h4>
         <p>lagu daerah asal Cirebon, Jawa Barat, yang diciptakan oleh H. Abdul Adjib</p>
@@ -811,7 +811,7 @@ background: #fff;
 
     <!-- Docang -->
     <div class="card kuliner-card" data-modal="modal-gamelan">
-      <div class="media" style="background-image:url('photo/gamelan_crb.jpg')" aria-label="Docang"></div>
+      <div class="media" style="background-image:url('gamelan_crb.jpg')" aria-label="Docang"></div>
       <div class="card pad">
         <h4>Gamelan Cirebon</h4>
         <p>Ansambel musik tradisional yang menggunakan alat musik pukul untuk menghasilkan suara.</p>
@@ -826,7 +826,7 @@ background: #fff;
   <div class="grid three">
        <!-- Mie Koclok -->
     <div class="card kuliner-card" data-modal="modal-batik">
-      <div class="media" style="background-image:url('photo/kain_batik.jpg')" aria-label="Mie Koclok"></div>
+      <div class="media" style="background-image:url('kain_batik.jpg')" aria-label="Mie Koclok"></div>
       <div class="card pad">
         <h4>Batik cirebon</h4>
         <p>Batik Jawa Barat yang dikenal dengan warna-warni cerah dan motif-motif yang kaya makna, seperti Mega Mendung, Paksi Naga Liman, dan Singa Barong.</p>
@@ -835,7 +835,7 @@ background: #fff;
 
     <!-- Serabi Cirebon -->
     <div class="card kuliner-card" data-modal="modal-lukis">
-      <div class="media" style="background-image:url('photo/LUKISAN_KACA_CRB.jpg')" aria-label="Serabi Cirebon"></div>
+      <div class="media" style="background-image:url('LUKISAN_KACA_CRB.jpg')" aria-label="Serabi Cirebon"></div>
       <div class="card pad">
         <h4>Seni Lukis Kaca</h4>
         <p>Seni lukis khas Jawa Barat yang dibuat dengan melukis objek di belakang kaca menggunakan teknik terbalik</p>
@@ -845,7 +845,7 @@ background: #fff;
 
    <!-- Sate Kalong -->
     <div class="card kuliner-card" data-modal="modal-ukir">
-      <div class="media" style="background-image:url('photo/ukiran-kayu.jpg')" aria-label="Sate Kalong"></div>
+      <div class="media" style="background-image:url('ukiran-kayu.jpg')" aria-label="Sate Kalong"></div>
       <div class="card pad">
         <h4>Kerajinan Ukir Kayu</h4>
         <p>Warisan budaya yang memiliki nilai filosofis mendalam, dengan pengaruh dari budaya lain</p>
@@ -860,7 +860,7 @@ background: #fff;
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2>Tari Topeng</h2>
-    <img src="photo/tari_topeng.png" alt="Tari Topeng">
+    <img src="tari_topeng.png" alt="Tari Topeng">
         <p>Tari Topeng Merupakan salah satu ikon kesenian Cirebon yang paling terkenal. Tarian ini menggunakan topeng sebagai atribut utama dan menggambarkan berbagai karakter dalam cerita tradisional. Tari Topeng menampilkan penari menggunakan topeng untuk memerankan karakter-karakter berbeda, seperti Panji, Samba, Rumyang, Tumenggung, dan Kelana. Tari Topeng juga digunakan sebagai media penyebaran agama Islam.</p>
   </div>
 </div>
@@ -869,7 +869,7 @@ background: #fff;
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2>Tari Sintren</h2>
-    <img src="photo/tari_sintren.jpg" alt="Tari Sintren">
+    <img src="tari_sintren.jpg" alt="Tari Sintren">
     <p>Tari sintren merupakan seni tari tradisional dari Cirebon yang mengandung unsur magis, nama sintren berasal dari dua kata yakni si dan tren , dalam bahasa Jawa kata "si" sebuah panggilan yang artinya " ia atau dia", sedangkan kata "tren" berasal dari kata tri/putri, sehingga sintren memiliki arti si putri atau sang penari. Pertunjukan dimulai dengan pawang yang membacakan mantra untuk memanggil roh atau arwah, yang dipercaya akan merasuki tubuh sang penari.  Saat penonton melemparkan uang koin ke arah penari (balangan), penari akan terjatuh pingsan. </p>
   </div>
 </div>
@@ -878,7 +878,7 @@ background: #fff;
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2>Wayang Babad</h2>
-    <img src="photo/wayang_babad.png" alt="Wayang Babad">
+    <img src="wayang_babad.png" alt="Wayang Babad">
     <p>Wayang babad adalah kesenian tradisional wayang, terutama wayang kulit dengan cerita-cerita dari babad atau sejarah Nusantara, seperti kisah Majapahit atau Kartasura, dan bisa juga dari sejarah para wali.</p>
   </div>
 </div>
@@ -887,7 +887,7 @@ background: #fff;
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2>Masres (Sandiwara)</h2>
-    <img src="photo/masres.jpg" alt="Masres">
+    <img src="masres.jpg" alt="Masres">
     <p>Masres atau sandiwara adalah sebutan untuk seni pertunjukan teater rakyat yang berkembang di wilayah Cirebon, Jawa Barat. Masres adalah satu seni pertunjukan rakyat yang tidak hanya menghibur, tetapi juga berfungsi sebagai media untuk melestarikan cerita-cerita sejarah dan identitas budaya Cirebon.</p>
   </div>
 </div>
@@ -896,7 +896,7 @@ background: #fff;
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2>Tarian Angklung Bungko</h2>
-    <img src="photo/tarian-Angklung-Bungko.jpg" alt="Angklung Bungko">
+    <img src="tarian-Angklung-Bungko.jpg" alt="Angklung Bungko">
     <p>Mie berkuah kental dengan campuran santan, tepung, suwiran ayam, telur, dan taburan seledri.Angklung Bungko adalah sebuah kesenian musik dan tari tradisional yang berasal dari Desa Bungko, Cirebon. Tarian ini diiringi alat musik gendang, angklung, tutukan, klenong, dan gong.<br>
     Kesenian ini lahir dari luapan kegembiraan masyarakat Bungko setelah memenangkan peperangan. Angklung Bungko telah ditetapkan sebagai salah satu Warisan Budaya Takbenda (WBTb) Indonesia dan menjadi identitas penting bagi masyarakat Cirebon.</p>
   </div>
@@ -906,7 +906,7 @@ background: #fff;
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2>Lagu Kota Cirebon - Dian Sastra</h2>
-    <img src="photo/cirebon.jpg" alt="kota cirebon">
+    <img src="cirebon.jpg" alt="kota cirebon">
     <p>Lagu daerah Jawa Barat khas dari Cirebon dan menjadi sangat populer secara nasional.</p>
     
     <!-- Tombol Dengarkan Lagu -->
@@ -927,7 +927,7 @@ background: #fff;
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2> Warung Pojok</h2>
-    <img src="photo/Gapura-Selamat-Datang-Kota-Cirebon.jpg" alt="Warung Pojok">
+    <img src="Gapura-Selamat-Datang-Kota-Cirebon.jpg" alt="Warung Pojok">
         <p>Lagu "Warung Pojok" adalah lagu daerah asal Cirebon, Jawa Barat, yang diciptakan oleh H. Abdul Adjib. Lagu ini menceritakan tentang suasana di sebuah kedai kecil (warung pojok) yang sangat disukai pengunjung, di mana makanan enak dan pelayan yang ramah menjadi daya tarik utama, sehingga membuat pengunjung merasa nyaman dan betah.</p>
 
     <!-- Tombol Dengarkan Lagu -->
@@ -945,7 +945,7 @@ background: #fff;
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2>Gamelan Cirebon</h2>
-    <img src="photo/gamelan_cirebon.jpg" alt="gamelan">
+    <img src="gamelan_cirebon.jpg" alt="gamelan">
     <p>Ansambel musik tradisional yang menggunakan alat musik pukul untuk menghasilkan suara, yang memiliki sejarah panjang dan terkait erat dengan dakwah Islam oleh Sunan Gunung Jati.<br> Jenis-jenis Gamelan Cirebon : Gamelan Sekaten (gamelan pusaka yang tersimpan di Keraton Kanoman dan Kasepuhan), Gamelan Dengung (Gamelan pusaka milik Keraton Kacirebonan yang berfungsi sebagai media doa saat musim paceklik dan kekeringan), dan Gamelan Mega Mendung (Gamelan gaya Cirebon yang dibuat pada awal abad ke-20 dengan kekhasan ukiran mega mendung)</p>
   </div>
 </div>
@@ -955,7 +955,7 @@ background: #fff;
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2>Batik Cirebon</h2>
-    <img src="photo/BATIK.png" alt="kota cirebon">
+    <img src="BATIK.png" alt="kota cirebon">
     <p>Batik Cirebon adalah batik khas daerah pesisir Jawa Barat yang dikenal dengan warna-warni cerah dan motif-motif yang kaya makna, seperti Mega Mendung, Paksi Naga Liman, dan Singa Barong. Pengaruh budaya Tiongkok terlihat jelas dalam motif Mega Mendung, yang menggambarkan awan pembawa hujan sebagai simbol kesuburan dan kehidupan.</p>
     
     <!-- Tombol Dengarkan Lagu -->
@@ -973,7 +973,7 @@ background: #fff;
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2>Lukisan Kaca</h2>
-    <img src="photo/LUKISAN_KACA_CRB.jpg" alt="Lukis">
+    <img src="LUKISAN_KACA_CRB.jpg" alt="Lukis">
     <p>seni lukis khas Jawa Barat yang dibuat dengan melukis objek di belakang kaca menggunakan teknik terbalik, 
       dimulai sejak abad ke-17 sebagai media dakwah Islam dengan objek seperti Ka'bah dan kaligrafi, kemudian berkembang dengan motif wayang, kaligrafi, dan batik Mega Mendung, menjadi warisan budaya yang mengombinasikan estetika, spiritualitas, dan filosofi lokal seperti primbon.</p>
   </div>
@@ -983,7 +983,7 @@ background: #fff;
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2>Ukiran Kayu</h2>
-    <img src="photo/ukir_naga_liman.png" alt="Lukis">
+    <img src="ukir_naga_liman.png" alt="Lukis">
     <p>Warisan budaya yang memiliki nilai filosofis mendalam, dengan pengaruh dari budaya lain, serta sering digunakan sebagai simbol karakter manusia atau pesan kehidupan. 
       upaya untuk melestarikan seni ukir kayu Cirebon dengan mengajarkan ilmu ukir kepada anak-anak, seperti yang dilakukan oleh seniman ukir kayu dari Keraton Kasepuhan dan Kanoman. 
 </p>
@@ -1057,22 +1057,22 @@ modals.forEach(modal => {
   <div class="kategori-budaya">
   <a href="sejarah.html" class="box">
     <span>SEJARAH</span>
-    <img src="photo/kesepuhan.png" alt="Sejarah">
+    <img src="kesepuhan.png" alt="Sejarah">
   </a>  
   
   <a href="kuliner.html" class="box">
     <span>KULINER</span>
-    <img src="photo/empal_gentong.png" alt="Kuliner">
+    <img src="empal_gentong.png" alt="Kuliner">
   </a>
 
   <a href="batik.html" class="box">
     <span>BATIK</span>
-    <img src="photo/buat_batik.png" alt="Batik">
+    <img src="buat_batik.png" alt="Batik">
   </a>
   
   <a href="tradisi.html" class="box">
     <span>TRADISI</span>
-    <img src="galeri/event.png" alt="Tradisi">
+    <img src="event.png" alt="Tradisi">
   </a>
 
 </div>
@@ -1088,7 +1088,7 @@ modals.forEach(modal => {
 
 
   <footer class="reveal">
-    <img src="photo/logo.png" alt="Logo" style="height:36px;opacity:.7"/>
+    <img src="logo.png" alt="Logo" style="height:36px;opacity:.7"/>
     <div style="margin-top:8px;font-weight:700;color:#35576d">JELAJAHI WARISAN CIREBON</div>
   </footer>
 
